<?xml version="1.0"?>
<package format="2">
  <name>hover</name>
  <version>0.0.0</version>
  <description>The hover package. Implements an action that simulates being at anchor by hovering in place.</description>

  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>geographic_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>project11</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>geographic_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rosbag</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>geographic_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>project11</exec_depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>geographic_visualization_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>marine_msgs</depend>
  <export>
  </export>
</package>
